--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "graphql and node",
   "main": "index.js",
   "scripts": {
+    "start": "babel-watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,6 +24,10 @@
   },
   "homepage": "https://github.com/oaboluwarin/scale#readme",
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-watch": "^7.0.0",
     "eslint": "^6.0.0",
     "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-prettier": "^3.1.0",
