add server dependent packages

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "graphql and node",
   "main": "index.js",
   "scripts": {
-    "start": "babel-watch index.js",
+    "start": "babel-watch server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,5 +33,9 @@
     "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.3.1"
+  }
 }
