--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "graphql and node",
   "main": "index.js",
   "scripts": {
-    "start": "babel-watch server.js",
+    "start": "babel-watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,13 +29,14 @@
     "@babel/preset-env": "^7.4.5",
     "babel-watch": "^7.0.0",
     "eslint": "^6.0.0",
-    "eslint-config-prettier": "^5.0.0",
-    "eslint-plugin-prettier": "^3.1.0",
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "apollo-server-express": "^2.6.7",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.8.0",
-    "graphql": "^14.3.1"
+    "graphql": "^14.3.1",
+    "graphql-tools": "^4.0.5",
+    "mongoose": "^5.6.1"
   }
 }
