--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/node": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@babel/runtime": "^7.4.5",
     "babel-watch": "^7.0.0",
     "eslint": "^6.0.0",
     "prettier": "^1.18.2"
@@ -34,6 +36,7 @@
   "dependencies": {
     "apollo-server-express": "^2.6.7",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "graphql": "^14.3.1",
     "graphql-tools": "^4.0.5",
