--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "graphql": "^14.3.1",
+    "graphql-resolvers": "^0.3.3",
     "graphql-tools": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.1"
